--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,5 +3,6 @@
     "/css/app.css": "/css/app.css",
     "/img/favicon.png": "/img/favicon.png",
     "/img/green-kanban_logo-full.png": "/img/green-kanban_logo-full.png",
-    "/img/green-kanban_logo.png": "/img/green-kanban_logo.png"
+    "/img/green-kanban_logo.png": "/img/green-kanban_logo.png",
+    "/img/logo.png": "/img/logo.png"
 }
